fix: header arrow & title alignment

--- a/assets/style/headermenu.scss
+++ b/assets/style/headermenu.scss
@@ -13,7 +13,7 @@ header {
 #arrow-back {
   position: absolute;
   z-index: 99;
-  top: 40px;
+  top: 45%;
   left: 0;
   margin-left: 23px;
 }
